--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Special files
+*.pcl  # pickle file
+.*.swp
+
 # C extensions
 *.so
 
 # Distribution / packaging
+.DS_Store
 .Python
 build/
 develop-eggs/
