--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ script:
   - cd data/biomodels; unzip *.zip > t.out; cd ..; cd ..
   - PYTHONPATH="`pwd`/xstate/python:`pwd`\common_python"
   - export PYTHONPATH
-  - nosetests SBMLLint/tests
+  - nosetests xstate/python/tests
