--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ install:
 
 script:
   - PYTHONPATH="`pwd`/xstate/python:`pwd`/common_python"
-  - export PYTHONPATH1
+  - export PYTHONPATH
   - nosetests xstate/python/tests
